--- a/.github/workflows/management-group-release.yml
+++ b/.github/workflows/management-group-release.yml
@@ -1,7 +1,11 @@
 name: Module Management Groups Release
 
 on:
-  workflow_dispatch:
+ push:
+    branches:
+      - 'main'
+    paths:
+      - 'management-groups/**'
 
 jobs:
 
