--- a/.github/workflows/management-groups-release.yml
+++ b/.github/workflows/management-groups-release.yml
@@ -10,7 +10,7 @@ on:
 jobs:
 
   module-release:
-    uses: briteliteimmersive/devops-automation-enablers/.github/workflows/tf-module-release.yml@feature/tf-workflows
+    uses: briteliteimmersive/devops-automation-enablers/.github/workflows/tf-module-release.yml@main
     with:
       tf-module-name: 'management-groups'
     secrets: inherit
